# ElRepaso

./: .gitignore  README.md
01 Hello World/: README.html
02 Variables y tipos de datos/: README.html  a.out  variables.cpp
04 Complex Variables/: README.html
05 Objetos/: README.html
10 Arrays and Strings/: .project
10 Arrays and Strings/src/: Ejemplo01.java  Ejemplo02.java  Maze.java  RegexTest.java
11 Trees/: .project
11 Trees/src/: BinarySearchTree.java  BinaryTree.java
11 Trees/test/: BinarySearchTreeTest.java
12 Lists/: .project
12 Lists/src/com/larc63/elrepaso/: LinkedList.java  MinStack.java  Stack.java
12 Lists/test/com/larc63/elrepaso/: LinkedListTest.java  StackTest.java
20 Ejemplos/: Ejemplo01.java
20 Ejemplos/angular/multiples controladores/: index.html
20 Ejemplos/html/: index.html
20 Ejemplos/javascript/chart.js/: gulpfile.js  package.json
20 Ejemplos/javascript/chart.js/css/: style.css
20 Ejemplos/typescript/typescript01/: gulpfile.js  package.json  tsconfig.json
20 Ejemplos/typescript/typescript01/pages/: index.html
20 Ejemplos/typescript/typescript01/ts/: Main.ts
30 Containerized/: CMakeLists.txt  Dockerfile  docker-compose.yaml  gulpfile.js  package-lock.json  package.json
30 Containerized/baseImage/: Dockerfile
30 Containerized/include/: Calculator.h  Trie.h  TrieNode.h
30 Containerized/src/: Calculator.cpp  Trie.cpp
30 Containerized/tests/: CalculatorTests.cpp  TrieTests.cpp
common/: prism.css  prism.js  style.css
teks/5th/: 01 - Arithmetic.html  index.md  myMath.js
